# visual_servoing

./: .gitignore  README.md
uav_visual_servoing/: CMakeLists.txt  README.md  package.xml
uav_visual_servoing/include/uav_visual_servoing/: VisualServoing.h  visual_servoing_node.h
uav_visual_servoing/params/: aruco_params.yaml
uav_visual_servoing/src/: VisualServoing.cpp  visual_servoing_node.cpp
ugv_visual_servoing/: CMakeLists.txt  package.xml
ugv_visual_servoing/data/meshes/: aruco (orig).dae  aruco.dae  aruco1.dae  aruco_full.dae
ugv_visual_servoing/data/urdf/: aruco.urdf
ugv_visual_servoing/include/ugv_visual_servoing/: ClusterExtractor.h  ErrorFunction.h  MoveBase.h  Optimization.h  Wrapper.h
ugv_visual_servoing/params/: aruco_params.yaml  optimal_visual_servoing.yaml
ugv_visual_servoing/src/: ArucoTagsDetection.cc  ClusterExtractor.cc  DynamicWindowSampler.cc  Navigation.cc  Optimization.cc  TagTrajectoryGenerator.cc  Wrapper.cc
